# remote_realsense_yolo

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
config/: remote_realsense_yolo.yaml
launch/: remote_realsense_yolo.launch.py
src/remote_realsense_yolo/: __init__.py  remote_realsense_yolo_node.py
